log/build_2026-04-09_21-21-30/bot_application/stderr.log
/home/rose/.local/lib/python3.10/site-packages/setuptools/_distutils/dist.py:287: UserWarning: Unknown distribution option: 'tests_require'
  warnings.warn(msg)
  File "/home/rose/pi4b_ros2/car_ws/install/bot_application/lib/python3.10/site-packages/bot_application/navigator_unified.py", line 531
    (len(remaining_ways points))
         ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: f-string: invalid syntax. Perhaps you forgot a comma?

  File "/home/rose/pi4b_ros2/car_ws/install/bot_application/lib/python3.10/site-packages/bot_application/waypoint_cost_calculator copy.py", line 196
    create_goal_pose(navigator, 0.97, 0.72, 0.0)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

